@@ -1470,3 +1470,39 @@ else:
         return \
             residuals_point   [idx, ...    ], \
             observations_point[idx, ..., :2]
+
+def R_aligned_to_vector(v):
+    r'''Compute a rotation to map a given vector to [0,0,1]
+
+SYNOPSIS
+
+    # I have a plane that passes through a point p, and has a normal n. I
+    # compute a transformation from the world to a coord system aligned to the
+    # plane, with p at the origin. R_plane_world p + t_plane_world = 0:
+
+    Rt_plane_world = np.zeros((4,3), dtype=float)
+    Rt_plane_world[:3,:] = mrcal.R_aligned_to_vector(n)
+    Rt_plane_world[ 3,:] = -mrcal.rotate_point_R(Rt_plane_world[:3,:],p)
+
+This rotation is not unique: adding any rotation around v still maps v to
+[0,0,1]. An arbitrary acceptable rotation is returned.
+
+ARGUMENTS
+
+- v: a numpy array of shape (3,). The vector that the computed rotation maps to
+  [0,0,1]. Does not need to be normalized. Must be non-0
+
+RETURNED VALUES
+
+The rotation in a (3,3) array
+
+    '''
+    z = v/nps.mag(v)
+    if np.abs(z[0]) < .9:
+        x = np.array((1,0,0.))
+    else:
+        x = np.array((0,1,0.))
+    x -= nps.inner(x,z)*z
+    x /= nps.mag(x)
+    y = np.cross(z,x)
+    return nps.cat(x,y,z)
