@@ -50,6 +50,8 @@ calibration
 
 03f030: Procrustes transform functions detect and report errors
 
+Added [[file:mrcal-python-api-reference.html#-R_aligned_to_vector][=mrcal.R_aligned_to_vector()=]]
+
 * Migration notes 2.3 -> 3.0
 
 commit 76248fce8655fba0aec1175157cbe8f8da055b7a
